# job-hunt-assistant

./: .gitignore  .pre-commit-config.yaml  .pre-commmit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
backend/: README.md  orchestrator.py  pyproject.toml
backend/agents/: jd_analyst.py  messaging_agent.py  resume_cl_agent.py
backend/apis/: jobs_api.py
backend/tests/: test_orchestrator.py
backend/tests/agents/: test_jd_analyst.py  test_messaging_agent.py  test_resume_cl_agent.py
backend/tests/apis/: test_jobs_api.py
backend/tests/utils/: test_tracking.py
backend/utils/: .env.example  config.py  tracking.py
frontend/: streamlit_app.py
tests/: test_orchestrator.py
tests/agents/: test_jd_analyst.py  test_messaging_agent.py  test_resume_cl_agent.py
tests/apis/: test_jobs_api.py
tests/utils/: test_tracking.py
