[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-hunt-assistant"
version = "0.1.0"
description = "AI-powered job hunt assistant that helps users find and apply for jobs efficiently."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "python-dotenv",
    "langchain-google-genai>=4.2.1",
    "crewai>=1.13.0",
    "langchain>=1.2.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "ruff",
    "mypy",
    "bandit",
    "types-requests",
    "types-PyYAML"
]

test = [
    "pytest",
    "pytest-cov"
]

[tool.ruff]
line-length = 68

[tool.black]
line-length = 68

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
install_types = true
exclude = 'dist|\.venv|build'

[tool.bandit]
exclude_dirs = [".venv", "__pycache__", "build", "dist"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
